# OpenGxV

./: CMakeLists.txt  README.md  index.md
core/: CMakeLists.txt  gv_chunk.h  gv_displayobject.cpp  gv_displayobject.h  gv_displayobjectcontainer.cpp  gv_displayobjectcontainer.h  gv_driverinfo.cpp  gv_driverinfo.h  gv_env.cpp  gv_env.h  gv_event.cpp  gv_event.h  gv_eventdispatcher.cpp  gv_eventdispatcher.h  gv_file.cpp  gv_file.h  gv_filetype.gperf  gv_filetype.inl  gv_graphics.cpp  gv_graphics.h  gv_hash.h  gv_hashmap.h  gv_image.cpp  gv_image.h  gv_interactiveobject.cpp  gv_interactiveobject.h  gv_layout.h  gv_list.h  gv_log.cpp  gv_log.h  gv_math.cpp  gv_math.h  gv_memory.h  gv_object.cpp  gv_object.h  gv_path.cpp  gv_path.h  gv_pixel.cpp  gv_pixel.h  gv_platform.h  (+23 more)
core/codecs/: gv_png.cpp  gv_png.h
